--- a/src/components/landing-page/style/landing-page.scss
+++ b/src/components/landing-page/style/landing-page.scss
@@ -1,10 +1,11 @@
-//.landing{
-//  min-height: 3265px;
-//}
+.landing{
+  width: 100%;
+}
 .landing__main{
   //z-index: -5;
   width: 100%;
-  background: url("../images/image-for-landing.png") no-repeat;
+  background: url("../images/image-for-landing.png") no-repeat center;
+  background-size: cover;
   min-height: 900px;
   position: relative;
   &:after{
@@ -18,6 +19,7 @@
     background-color: rgba(32, 42, 73, 0.3);
   }
 }
+
 .landing__slogan{
   position: relative;
   z-index: 100;
@@ -31,6 +33,10 @@
   padding-top: 8%;
   padding-right: 5%;
   padding-left: 5%;
+  @media screen and (max-width: 650px){
+    font-size: 42px;
+    width: 95%;
+  }
 }
 button.landing__join-btn{
   //overflow: hidden;
@@ -51,25 +57,6 @@ button.landing__join-btn{
   line-height: 18px;
   text-align: center;
   color: #000000;
-  &:after{
-    content: "";
-    background: #D8D8D8;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: 0!important;
-    margin-top: 120%;
-    opacity: 0;
-    transition: 0s;
-  }
-  &:hover:after{
-    padding: 100% 0;
-    margin-top: -120%;
-    margin-left: 300%;
-    opacity: 0;
-    transition: all 0.8s
-  }
   &:focus{
     outline: none;
   }
@@ -80,11 +67,17 @@ button.landing__join-btn{
   //padding-left: 5%;
   display: grid;
   grid-template-rows: 25% 43.75% 31.25%;
+  @media screen and (max-width: 900px){
+    display: block;
+  }
 }
 .landing__about{
   padding-left: 5%;
   display: flex;
   list-style: none;
+  @media screen and (max-width: 900px){
+    display: block;
+  }
 }
 .landing__about-title{
   grid-area: at;
@@ -111,22 +104,44 @@ button.landing__join-btn{
   display: flex;
   align-items: center;
   color: #000000;
+  @media screen and (max-width: 900px){
+    width: 100%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
 }
 .landing__about-img{
   grid-area: aimg;
+  @media screen and (max-width: 650px){
+   display: none;
+  }
 }
 .landing__how-works{
   padding-left: 5%;
+  @media screen and (max-width: 900px){
+    padding-top: 6%;
+    padding-bottom: 6%;
+  }
 }
 .landing__how-works-list{
   display: flex;
   flex-flow: row wrap;
+  @media screen and (max-width: 900px){
+    flex-flow: column;
+    justify-content: center;
+  }
 }
 .landing__hw-item{
   width: 45%;
   display: flex;
   padding: 5% 0 5% 0;
   margin-right: 5%;
+  @media screen and (max-width: 900px){
+    width: 100%;
+  }
+  @media screen and (max-width: 550px){
+    display: block;
+  }
 }
 .landing__img-border{
   width: 214px;
@@ -140,6 +155,9 @@ button.landing__join-btn{
 }
 .landing__hw-description{
   margin-left: 8%;
+  @media screen and (max-width: 550px){
+    margin-top: 7%;
+  }
 }
 .landing__hw-title{
   font-family: Muller;
@@ -176,6 +194,7 @@ button.landing__join-btn{
   display: flex;
   align-items: center;
   background: url("../images/donation-back.png") no-repeat;
+  background-size: cover;
   min-height: 390px;
   position: relative;
   &:after{
@@ -188,6 +207,7 @@ button.landing__join-btn{
     display: block;
     background-color: rgba(32, 42, 73, 0.72);
   }
+
 }
 .landing__donation-text{
   z-index: 1;
@@ -199,6 +219,9 @@ button.landing__join-btn{
   color: #FFFFFF;
   width: 36%;
   padding-left: 5%;
+  @media screen and (max-width: 900px){
+    width: 80%;
+  }
 }
 .landing__footer{
   padding: 0 5% 0 5%;
