--- a/src/components/landing-page/landing-header/style/header-landing.scss
+++ b/src/components/landing-page/landing-header/style/header-landing.scss
@@ -1,11 +1,12 @@
 .header-landing{
-  background: url("../../images/image-for-landing.png")  no-repeat top center;
+  //background: url("../../images/image-for-landing.png")  no-repeat top center;
   //background-size: cover;
   padding-left: 5%;
   padding-right: 5%;
-  @media screen and (min-width: 1500px){
-    background-size: cover;
-  }
+  //@media screen and (min-width: 1500px){
+  //  background-size: cover;
+  //  background-position: top center;
+  //}
 }
 .landing__nav-item{
   position: relative;
