--- a/src/components/landing-page/style/landing-page.css
+++ b/src/components/landing-page/style/landing-page.css
@@ -4,7 +4,7 @@
 
 .landing__main {
   width: 100%;
-  background: url("../images/image-for-landing.png") no-repeat center;
+  background: url("../images/image-for-landing.png") no-repeat top center;
   background-size: cover;
   min-height: 900px;
   position: relative;
