--- a/src/components/landing-page/style/landing-page.scss
+++ b/src/components/landing-page/style/landing-page.scss
@@ -4,7 +4,7 @@
 .landing__main{
   //z-index: -5;
   width: 100%;
-  background: url("../images/image-for-landing.png") no-repeat center;
+  background: url("../images/image-for-landing.png") no-repeat top center;
   background-size: cover;
   min-height: 900px;
   position: relative;
@@ -18,6 +18,10 @@
     display: block;
     background-color: rgba(32, 42, 73, 0.3);
   }
+  //@media screen and (min-width: 1500px){
+  //  background-size: cover;
+  //  background-position: top center;
+  //}
 }
 
 .landing__slogan{
