--- a/src/components/landing-page/landing-login/style/login.css
+++ b/src/components/landing-page/landing-login/style/login.css
@@ -1,7 +1,8 @@
 .login-container {
   width: 100%;
-  background: url("../../images/image-for-landing.png") no-repeat;
+  background: url("../../images/image-for-landing.png") no-repeat center;
   min-height: 900px;
+  background-size: cover;
   position: relative;
 }
 .login-container:after {
@@ -28,16 +29,35 @@
   grid-gap: 5%;
   grid-template-columns: 45% 50%;
 }
+@media screen and (max-width: 1100px) {
+  .login-form {
+    height: 500px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .login-form {
+    grid-template-columns: 90% 5%;
+    width: 70%;
+    height: 400px;
+  }
+}
 
 .reset-form {
   z-index: 5;
   position: absolute;
   left: 35%;
   top: 10%;
-  padding: 2% 3%;
+  padding: 3% 3%;
   width: 32%;
   height: 400px;
   background-color: #FFFFFF;
+}
+@media screen and (max-width: 700px) {
+  .reset-form {
+    width: 65%;
+    left: 20%;
+    height: 350px;
+  }
 }
 
 .reset__text {
@@ -56,6 +76,13 @@
   justify-content: center;
   grid-template-rows: 30% 50%;
 }
+@media screen and (max-width: 700px) {
+  .login-form__item {
+    display: flex;
+    flex-flow: column;
+    margin: auto;
+  }
+}
 
 .login__form {
   display: grid;
@@ -63,10 +90,28 @@
   grid-template-rows: 70% 30%;
   align-items: center;
 }
+@media screen and (max-width: 700px) {
+  .login__form {
+    display: flex;
+    flex-flow: column;
+  }
+}
 
 .reset-form__item {
   height: 300px;
   display: grid;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1270px) {
+  .login-form__img {
+    width: 98%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .login-form__img {
+    display: none;
+  }
 }
 
 .login__title {
@@ -78,6 +123,16 @@
   font-size: 36px;
   line-height: 36px;
   color: #202A49;
+}
+@media screen and (max-width: 1270px) {
+  .login__title {
+    font-size: 28px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .login__title {
+    font-size: 20px;
+  }
 }
 
 .reset__title {
@@ -99,6 +154,7 @@
 .login__exit {
   width: 14px;
   height: 14px;
+  float: right;
 }
 .login__exit:hover {
   background-color: #f5f4f2;
@@ -119,4 +175,35 @@
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
   cursor: pointer;
+}
+
+.login__input {
+  width: 350px;
+  height: 46px;
+  border: 1px solid rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+}
+.login__input::placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+}
+@media screen and (max-width: 700px) {
+  .login__input {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1260px) {
+  .login__input {
+    width: 200px;
+  }
 }
