--- a/src/components/landing-page/landing-login/style/login.scss
+++ b/src/components/landing-page/landing-login/style/login.scss
@@ -1,7 +1,8 @@
 .login-container{
   width: 100%;
-  background: url("../../images/image-for-landing.png") no-repeat;
+  background: url("../../images/image-for-landing.png") no-repeat center;
   min-height: 900px;
+  background-size: cover;
   position: relative;
   &:after{
     content: '';
@@ -26,16 +27,29 @@
   background-color: #FFFFFF;
   grid-gap: 5%;
   grid-template-columns: 45% 50%;
+  @media screen and (max-width: 1100px){
+    height: 500px;
+  }
+  @media screen and (max-width: 700px){
+    grid-template-columns: 90% 5%;
+    width: 70%;
+    height: 400px;
+  }
 }
 .reset-form{
   z-index: 5;
   position: absolute;
   left: 35%;
   top: 10%;
-  padding: 2% 3%;
+  padding: 3% 3%;
   width: 32%;
   height: 400px;
   background-color: #FFFFFF;
+  @media screen and (max-width: 700px){
+    width: 65%;
+    left: 20%;
+    height: 350px;
+  }
 }
 .reset__text{
   display: flex;
@@ -51,6 +65,11 @@
   display: grid;
   justify-content: center;
   grid-template-rows: 30% 50%;
+  @media screen and (max-width: 700px){
+    display: flex;
+    flex-flow: column;
+    margin: auto;
+  }
   //align-items: flex-end;
 }
 .login__form{
@@ -58,12 +77,24 @@
   justify-content: center;
   grid-template-rows: 70% 30%;
   align-items: center;
+  @media screen and (max-width: 700px){
+    display: flex;
+    flex-flow: column;
+  }
 }
 .reset-form__item{
   height: 300px;
   display: grid;
-  //justify-content: center;
+  justify-content: center;
   //align-content: flex-end;
+}
+.login-form__img{
+  @media screen and (max-width: 1270px){
+    width: 98%;
+  }
+  @media screen and (max-width: 700px){
+    display: none;
+  }
 }
 .login__title{
   display: flex;
@@ -74,6 +105,12 @@
   font-size: 36px;
   line-height: 36px;
   color: #202A49;
+  @media screen and (max-width: 1270px){
+    font-size: 28px;
+  }
+  @media screen and (max-width: 700px){
+    font-size: 20px;
+  }
 }
 .reset__title{
   display: flex;
@@ -92,6 +129,7 @@
 .login__exit{
   width: 14px;
   height: 14px;
+  float: right;
   &:hover{
     background-color: #f5f4f2;
     box-shadow: 0 0 0 10px #f5f4f2;
@@ -110,4 +148,30 @@
   text-decoration-line: underline;
     cursor: pointer;
 }
+}
+.login__input{
+  width: 350px;
+  height: 46px;
+  border: 1px solid rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+  &::placeholder{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    color: #000000;
+  }
+  @media screen and (max-width: 700px){
+    width: 100%;
+  }
+  @media screen and (max-width: 1260px){
+    width: 200px;
+  }
 }
