--- a/src/components/dashboard/style/main.css
+++ b/src/components/dashboard/style/main.css
@@ -127,3 +127,9 @@
   width: 140%;
   border-bottom: 1px solid #202A49;
 }
+
+.dashboard__pagination {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
