--- a/src/components/popup-terms/style/terms-conditions.css
+++ b/src/components/popup-terms/style/terms-conditions.css
@@ -1,11 +1,17 @@
 .terms-conditions .modal-content {
-  left: -15%;
+  left: 0;
   top: 13%;
-  width: 150%;
+  width: 100%;
   height: 600px;
   background: #FFFFFF;
   border-radius: 20px;
   padding: 32px;
+}
+@media screen and (min-width: 1000px) {
+  .terms-conditions .modal-content {
+    left: -15%;
+    width: 150%;
+  }
 }
 
 .terms__title {
