--- a/src/components/dashboard/style/main.css
+++ b/src/components/dashboard/style/main.css
@@ -3,7 +3,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 25% 75%;
-  grid-template-rows: 80px minmax(893px, auto) 51px;
+  grid-template-rows: 80px minmax(974px, auto) 51px;
   overflow: hidden;
 }
 @media screen and (max-width: 1115px) {
@@ -132,4 +132,9 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
+}
+
+.dashboard__content {
+  display: grid;
+  grid-template-rows: 90% 5%;
 }
