--- a/src/components/dashboard/style/main.scss
+++ b/src/components/dashboard/style/main.scss
@@ -3,7 +3,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 25% 75%;
-  grid-template-rows: 80px minmax(893px, auto) 51px;
+  grid-template-rows: 80px minmax(974px, auto) 51px;
   @media screen and (max-width: 1115px){
     grid-template-columns: 5% 95%;
   }
@@ -123,5 +123,6 @@
   align-items: flex-end;
 }
 .dashboard__content{
-  //display: grid;
+  display: grid;
+  grid-template-rows: 90% 5%;
 }
