--- a/src/components/pagination/style/pagination.css
+++ b/src/components/pagination/style/pagination.css
@@ -3,8 +3,9 @@
 }
 
 .pagination__link {
+  cursor: pointer;
   background-color: #FFFFFF;
-  padding: 9px 10px;
+  padding: 8px 10px;
   border-radius: 50%;
   width: 30px;
   height: 30px;
