--- a/src/components/pagination/style/pagination.scss
+++ b/src/components/pagination/style/pagination.scss
@@ -2,8 +2,9 @@
   display: flex;
 }
 .pagination__link{
+  cursor: pointer;
   background-color: #FFFFFF;
-  padding: 9px 10px;
+  padding: 8px 10px;
   border-radius: 50%;
   width: 30px;
   height: 30px;
