--- a/src/components/inbox/inbox-page/style/inbox-page.css
+++ b/src/components/inbox/inbox-page/style/inbox-page.css
@@ -34,7 +34,7 @@
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: t;
-  font-family: Muller;
+  font-family: muller;
   font-style: normal;
   font-weight: bold;
   font-size: 28px;
