--- a/src/components/pop-up/popup-filter/style/popup-filter.scss
+++ b/src/components/pop-up/popup-filter/style/popup-filter.scss
@@ -6,12 +6,12 @@
   background: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
-  z-index: 1;
+  z-index: 654;
   padding: 30px;
 }
 .filter__title{
   margin-bottom: 4%;
-  font-family: Muller;
+  font-family: muller;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
