--- a/src/components/sidebar/style/sidebar.scss
+++ b/src/components/sidebar/style/sidebar.scss
@@ -111,7 +111,35 @@ $percent: calc(var(--rating) / 5 * 100%);
   color: rgba(255, 255, 255, 0.5);
   margin-bottom: 10px;
 }
+.profile-sidebar__text-about-me{
+  overflow-y: scroll;
+  height: 100px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 170%;
+  color: rgba(255, 255, 255, 0.5);
+  &::-webkit-scrollbar {
+    width: 5px;
+    box-sizing: content-box;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #F4F3F3;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #D8D8D8;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: #888;
+  }
+}
 .profile-sidebar__detail-text{
+  overflow: hidden;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
