--- a/src/components/sidebar/style/sidebar.css
+++ b/src/components/sidebar/style/sidebar.css
@@ -10,7 +10,7 @@
   grid-row-start: 1;
   grid-row-end: 3;
   grid-gap: 0;
-  grid-template-rows: repeat(4, 58px) 500px;
+  grid-template-rows: repeat(4, 58px) 50%;
   grid-template-columns: repeat(2, 50%);
   grid-template-areas: "l l" "p g" "p g" "r r" "w w";
 }
@@ -299,4 +299,6 @@
   color: white;
   grid-area: w;
   padding-right: 6%;
+  display: grid;
+  grid-template-rows: 40% 60%;
 }
