--- a/src/components/sidebar/style/sidebar.scss
+++ b/src/components/sidebar/style/sidebar.scss
@@ -12,7 +12,7 @@ $percent: calc(var(--rating) / 5 * 100%);
   grid-row-start: 1;
   grid-row-end: 3;
   grid-gap: 0;
-  grid-template-rows: repeat(4, 58px) 500px;
+  grid-template-rows: repeat(4, 58px) 50%;
   grid-template-columns: repeat(2, 50%);
   grid-template-areas:
     "l l"
@@ -270,4 +270,6 @@ $percent: calc(var(--rating) / 5 * 100%);
   color: white;
   grid-area: w;
   padding-right: 6%;
+  display: grid;
+  grid-template-rows: 40% 60%;
 }
