--- a/src/components/dashboard/style/main.scss
+++ b/src/components/dashboard/style/main.scss
@@ -24,6 +24,10 @@
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
+  @media screen and (max-width: 900px) {
+    position: absolute;
+    left: -500px;
+  }
 }
 .dashboard__list{
   height: 50px;
