--- a/src/components/confirm-pages/style/confirm-page.scss
+++ b/src/components/confirm-pages/style/confirm-page.scss
@@ -26,13 +26,9 @@
   width: 30%;
   height: 400px;
   background-color: #FFFFFF;
-  @media screen and (max-width: 1100px){
-    height: 500px;
-  }
-  @media screen and (max-width: 700px){
-    grid-template-columns: 90% 5%;
+  @media screen and (max-width: 800px){
+    left: 18%;
     width: 70%;
-    height: 400px;
   }
 }
 .confirm__icon{
