--- a/src/components/landing-page/landing-header/style/header-landing.scss
+++ b/src/components/landing-page/landing-header/style/header-landing.scss
@@ -1,8 +1,10 @@
 .header-landing{
   //background: url("../../images/image-for-landing.png")  no-repeat top center;
   //background-size: cover;
+  position: relative;
   padding-left: 5%;
   padding-right: 5%;
+  z-index: 45754;
   //@media screen and (min-width: 1500px){
   //  background-size: cover;
   //  background-position: top center;
