fix edit, reviews

--- a/src/components/reviews/style/reviews.scss
+++ b/src/components/reviews/style/reviews.scss
@@ -28,6 +28,12 @@
 .reviews__user-profile{
   height: 450px;
 }
+.reviews__message{
+ margin: auto;
+ // background-color: #f5f4f2;
+  padding: 4%;
+ // border-radius: 50%;
+}
 .reviews__profile{
   height: 110px;
 }
