--- a/src/components/header/style/header.css
+++ b/src/components/header/style/header.css
@@ -19,8 +19,13 @@
   padding-right: 5.5%;
 }
 
-.nav {
+button.navbar-toggler {
+  margin-left: auto;
+}
+
+.nav__dashboard-collapse {
   padding-top: 8px;
+  background-color: #f5f4f2;
 }
 
 .nav__item {
@@ -51,12 +56,24 @@
   font-size: 20px;
   line-height: 20px;
 }
+@media screen and (max-width: 767px) {
+  .nav__item_active {
+    background-color: transparent;
+    color: rgba(0, 0, 0, 0.5);
+    font-style: normal;
+    padding: 0;
+    border: none;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+    margin-right: 2em;
+  }
+}
 
 .nav__item_logout {
   font-size: 16px;
   line-height: 16px;
   margin-right: 0;
-  margin-left: 30px;
 }
 
 .nav__item-logout-icon {
@@ -70,4 +87,16 @@
 }
 .nav__logout-btn:focus {
   outline: none;
+}
+@media screen and (max-width: 767px) {
+  .nav__logout-btn {
+    background-color: #f5f4f2;
+  }
+}
+
+@media screen and (min-width: 526px) {
+  .nav__submenu {
+    position: absolute;
+    top: -500px;
+  }
 }
