--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -22,7 +22,9 @@ button.navbar-toggler{
 }
 .nav__dashboard-collapse{
   padding-top: 8px;
-  background-color: #f5f4f2;
+  @media screen and (max-width: 767px){
+    background-color: #f5f4f2;
+  }
 }
 .nav__item{
   color: rgba(0, 0, 0, 0.5);
