--- a/src/components/header/style/header.css
+++ b/src/components/header/style/header.css
@@ -24,7 +24,7 @@ button.navbar-toggler {
 }
 
 .nav__dashboard-collapse {
-  padding-top: 8px;
+  padding-top: 20px;
 }
 @media screen and (max-width: 767px) {
   .nav__dashboard-collapse {
@@ -77,7 +77,8 @@ button.navbar-toggler {
 .nav__item_logout {
   font-size: 16px;
   line-height: 16px;
-  margin-right: 0;
+  float: right;
+  margin-left: auto;
 }
 
 .nav__item-logout-icon {
