--- a/src/components/pop-up/popup-filter/style/popup-filter.scss
+++ b/src/components/pop-up/popup-filter/style/popup-filter.scss
@@ -8,6 +8,25 @@
   border-radius: 20px;
   z-index: 654;
   padding: 30px;
+  @media screen and (max-width: 858px){
+    left: 15%;
+  }
+  @media screen and (max-width: 589px){
+    width: 80%;
+    display: inline-block;
+  }
+  //@media screen and (max-width: 785px){
+  //  left: 25%;
+  //}
+  //@media screen and (max-width: 680px){
+  //  left: 15%;
+  //}
+  //@media screen and (max-width: 595px){
+  //  display: flex;
+  //  flex-flow: column;
+  //  width: 80%;
+  //  left: 15%;
+  //}
 }
 .filter__title{
   margin-bottom: 4%;
@@ -25,10 +44,13 @@
   display: flex;
   justify-content: normal;
   margin-bottom: 4%;
+  @media screen and (max-width: 589px){
+    display: inline-block;
+  }
 }
 .filter__dates-text{
   margin-right: 2%;
-  font-family: Muller;
+  font-family: muller;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
