--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -21,6 +21,7 @@ button.navbar-toggler{
   margin-left: auto;
 }
 .nav__dashboard-collapse{
+  z-index: 5;
   padding-top: 20px;
   @media screen and (max-width: 767px){
     background-color: #f5f4f2;
