--- a/src/components/pop-up/popup-switch/style/popup.css
+++ b/src/components/pop-up/popup-switch/style/popup.css
@@ -9,6 +9,36 @@
   z-index: 656;
   padding: 30px;
 }
+@media screen and (max-width: 1300px) {
+  .switch {
+    left: 45%;
+  }
+}
+@media screen and (max-width: 960px) {
+  .switch {
+    left: 35%;
+  }
+}
+@media screen and (max-width: 785px) {
+  .switch {
+    left: 25%;
+  }
+}
+@media screen and (max-width: 680px) {
+  .switch {
+    left: 15%;
+    top: 15%;
+  }
+}
+@media screen and (max-width: 595px) {
+  .switch {
+    display: flex;
+    flex-flow: column;
+    width: 80%;
+    left: 15%;
+    top: 15%;
+  }
+}
 
 .switch__list {
   list-style: none;
