--- a/src/components/pop-up/popup-switch/style/popup.scss
+++ b/src/components/pop-up/popup-switch/style/popup.scss
@@ -9,6 +9,26 @@
   border-radius: 20px;
   z-index: 656;
   padding: 30px;
+  @media screen and (max-width: 1300px){
+    left: 45%;
+  }
+  @media screen and (max-width: 960px){
+    left: 35%;
+  }
+  @media screen and (max-width: 785px){
+    left: 25%;
+  }
+  @media screen and (max-width: 680px){
+    left: 15%;
+    top: 15%;
+  }
+  @media screen and (max-width: 595px){
+    display: flex;
+    flex-flow: column;
+    width: 80%;
+    left: 15%;
+    top: 15%;
+  }
 }
 .switch__list{
   list-style: none;
