--- a/src/components/update-info/style/update-info.css
+++ b/src/components/update-info/style/update-info.css
@@ -1,4 +1,5 @@
 .update-info .modal-content {
+  overflow-y: scroll;
   left: -15%;
   top: 13%;
   width: 170%;
@@ -6,6 +7,17 @@
   background: #FFFFFF;
   border-radius: 20px;
   padding: 32px;
+}
+@media screen and (max-width: 1100px) {
+  .update-info .modal-content {
+    width: 100%;
+    left: 0;
+  }
+}
+@media screen and (max-width: 581px) {
+  .update-info .modal-content {
+    width: 80%;
+  }
 }
 
 textarea.update__about-me.form-control {
