--- a/src/components/update-info/style/update-info.scss
+++ b/src/components/update-info/style/update-info.scss
@@ -1,4 +1,5 @@
 .update-info .modal-content{
+  overflow-y: scroll;
   left: -15%;
   top: 13%;
   width: 170%;
@@ -6,6 +7,13 @@
   background: #FFFFFF;
   border-radius: 20px;
   padding: 32px;
+  @media screen and (max-width: 1100px){
+    width: 100%;
+    left: 0;
+  }
+  @media screen and (max-width: 581px){
+    width: 80%;
+  }
 }
 textarea.update__about-me.form-control{
   width: 350px;
