--- a/src/components/update-info/style/update-info.scss
+++ b/src/components/update-info/style/update-info.scss
@@ -1,5 +1,6 @@
 .update-info .modal-content{
   overflow-y: scroll;
+  overflow-x: hidden;
   left: -15%;
   top: 13%;
   width: 170%;
@@ -9,10 +10,28 @@
   padding: 32px;
   @media screen and (max-width: 1100px){
     width: 100%;
-    left: 0;
+    left: 5%;
   }
   @media screen and (max-width: 581px){
     width: 80%;
+  }
+  &::-webkit-scrollbar {
+    width: 5px;
+    box-sizing: content-box;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #F4F3F3;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #D8D8D8;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: #888;
   }
 }
 textarea.update__about-me.form-control{
