--- a/src/components/sidebar/style/sidebar.css
+++ b/src/components/sidebar/style/sidebar.css
@@ -26,8 +26,8 @@
 @media screen and (max-width: 1115px) {
   .sidebar {
     width: 300px;
-    overflow: hidden;
-    left: -300px;
+    overflow: visible;
+    left: -330px;
     padding-right: 300px;
     transition: 0.3s;
   }
@@ -89,8 +89,9 @@
 }
 @media screen and (max-width: 1115px) {
   .profile-sidebar {
+    width: 300px;
     overflow: visible;
-    left: -335px;
+    left: -330px;
     padding-right: 300px;
     transition: 0.3s;
   }
