--- a/src/components/sidebar/style/sidebar.scss
+++ b/src/components/sidebar/style/sidebar.scss
@@ -31,8 +31,8 @@ $percent: calc(var(--rating) / 5 * 100%);
   }
   @media screen and (max-width: 1115px){
     width: 300px;
-    overflow: hidden;
-    left: -300px;
+    overflow: visible;
+    left: -330px;
     padding-right: 300px;
     transition: 0.3s;
     &:hover{
@@ -91,8 +91,9 @@ $percent: calc(var(--rating) / 5 * 100%);
   grid-template-columns: repeat(1, 90%);
   grid-template-rows: 2% 25% 12% 30% 10%;
   @media screen and (max-width: 1115px){
+    width: 300px;
     overflow: visible;
-    left: -335px;
+    left: -330px;
     padding-right: 300px;
     transition: 0.3s;
     &:hover{
