--- a/src/components/inbox/inbox-page/style/inbox-page.scss
+++ b/src/components/inbox/inbox-page/style/inbox-page.scss
@@ -15,6 +15,20 @@
     width: 92.5%;
     border-bottom: 1px solid rgba(196, 196, 196, 0.23);
   }
+  @media screen and (max-width: 973px){
+    display: flex;
+    flex-flow: column;
+    width: 98%;
+    &:before{
+      content: "";
+      position: absolute;
+      left: 50px;
+      top: 80px;
+      height: 0;
+      width:  0;
+      border-bottom: 1px solid rgba(196, 196, 196, 0.23);
+    }
+  }
 }
 .inbox-page__sidebar{
   display: grid;
@@ -32,6 +46,11 @@
     "h" "h" "h" "h"
     "bd" "bd" "bd" "bd" "bd" "bd"
     "btn";
+  @media screen and (max-width: 973px){
+    display: flex;
+    flex-flow: column;
+    margin-bottom: 5%;
+  }
 }
 .inbox-page__title{
   grid-area: t;
@@ -68,7 +87,13 @@
   grid-area: btn;
   display: flex;
   justify-content: flex-end;
-  align-items: flex-end;
+ // align-items: flex-end;
+  @media screen and (max-width: 973px) {
+    flex-flow: column;
+    align-content: space-between;
+    margin-top: 3%;
+    margin-bottom: 5%;
+  }
 }
 .inbox-page__post-buttons button{
   width: 200px;
@@ -85,6 +110,11 @@
 .inbox-page__photos{
   display: flex;
   justify-content: space-between;
+  @media screen and (max-width: 973px){
+    display: flex;
+    flex-flow: column;
+    margin-bottom: 5%;
+  }
 }
 .inbox-page__photo{
   display: flex;
