--- a/src/components/inbox/inbox-page/interested-user/style/interested.scss
+++ b/src/components/inbox/inbox-page/interested-user/style/interested.scss
@@ -1,8 +1,34 @@
 .interested-user{
+  overflow-y: scroll;
+  overflow-x: hidden;
   padding-top: 8%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  &::-webkit-scrollbar {
+    width: 5px;
+    box-sizing: content-box;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #F4F3F3;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #D8D8D8;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: #888;
+  }
 }
 .interested-user-card{
-  width: 90%;
+  width: 95%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   margin-bottom: 10%;
   background: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
@@ -47,6 +73,9 @@
   color: rgba(66, 65, 65, 0.71);
 }
 .interested__user-name{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   font-family: Muller;
   font-style: normal;
   font-weight: bold;
